--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.4",
     "apexcharts": "^4.1.0",
     "axios": "^1.7.8",
+    "jwt-decode": "^4.0.0",
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.8",
+    "primevue": "^4.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-slick": "^1.2.0",
